--- a/css/youth.css
+++ b/css/youth.css
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: kozG-EL;
+  src: url(../fonts_web/KozGoPro-ExtraLight.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-H;
+  src: url(../fonts_web/KozGoPro-Heavy.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-L;
+  src: url(../fonts_web/KozGoPro-Light.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-M;
+  src: url(../fonts_web/KozGoPro-Medium.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-R;
+  src: url(../fonts_web/KozGoPro-Regular.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-B;
+  src: url(../fonts_web/KozMinPro-Bold.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-EL;
+  src: url(../fonts_web/KozMinPro-ExtraLight.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-M;
+  src: url(../fonts_web/KozMinPro-Medium.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-R;
+  src: url(../fonts_web/KozMinPro-Regular.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-H;
+  src: url(../fonts_web/KozMinPro-Heavy.otf) format("opentype"); }
 * {
   margin: 0;
   padding: 0; }
@@ -13,8 +43,7 @@ nav {
   width: 100%;
   z-index: 30;
   height: 56px;
-  background-color: #fff;
-  box-shadow: 0px 0px 1px 1px #888; }
+  background-color: rgba(255, 255, 255, 0); }
   nav h3 {
     text-align: center;
     padding-top: 8px; }
@@ -164,7 +193,7 @@ main {
     top: 0;
     left: 0%;
     position: absolute;
-    background-image: url(../img/enjinai_kiryu.jpg);
+    background-image: url(../img/youth_hattori.jpg);
     background-size: cover; }
     main .top .title-text {
       text-align: center; }
@@ -183,7 +212,7 @@ main {
     left: 0;
     display: none;
     position: absolute;
-    background-image: url(../img/enjinai_ushio.jpg);
+    background-image: url(../img/youth_inada.jpg);
     background-size: cover; }
     main .eye h1 {
       font-size: 4em;
@@ -214,7 +243,7 @@ main {
     left: 0;
     display: none;
     position: absolute;
-    background-image: url(../img/enjinai_mori.jpg);
+    background-image: url(../img/youth_inada2.jpg);
     background-size: cover; }
     main .stylist h1 {
       font-size: 4em;
@@ -246,7 +275,7 @@ main {
     left: 0;
     display: none;
     position: absolute;
-    background-image: url(../img/enjinai_ibata.jpg);
+    background-image: url(../img/youth_hattori2.jpg);
     background-size: cover; }
   main h1 {
     font-size: 4em;
