--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -23,8 +23,8 @@ nav{
 	width: 100%;
 	z-index: 30;
 	height: 56px;
-	background-color: #fff;
-	box-shadow: 0px 0px 1px 1px #888;
+	background-color:rgba(255,255,255,0);
+	// box-shadow: 0px 0px 1px 1px #888;
 	h3{
 		text-align: center;
 		padding-top: 8px;
@@ -203,7 +203,7 @@ main{
 		top: 0;
 		left: 0%;
 		position:absolute;
-		background-image: url(../img/enjinai_kiryu.jpg);
+		background-image: url(../img/youth_hattori.jpg);
 		background-size: cover;
 		.title-text{
 			text-align: center;
@@ -226,7 +226,7 @@ main{
 		left: 0;
 		display: none;
 		position:absolute;
-		background-image: url(../img/enjinai_ushio.jpg);
+		background-image: url(../img/youth_inada.jpg);
 		background-size: cover;
 		h1{
 			font-size: 4em;
@@ -263,7 +263,7 @@ main{
 		left: 0;
 		display: none;
 		position:absolute;
-		background-image: url(../img/enjinai_mori.jpg);
+		background-image: url(../img/youth_inada2.jpg);
 		background-size: cover;
 		h1{
 			font-size: 4em;
@@ -300,7 +300,7 @@ main{
 		left: 0;
 		display: none;
 		position:absolute;
-		background-image: url(../img/enjinai_ibata.jpg);
+		background-image: url(../img/youth_hattori2.jpg);
 		background-size: cover;
 	}
 		h1{
