--- a/scss/main.scss
+++ b/scss/main.scss
@@ -203,7 +203,7 @@ header{
 	height: 50vh;
 	width: 100%;
 	background-size: cover;
-	background-image: url(../img/home_bikes.jpg);
+	background-image: url(../img/main_back.JPG);
 	background-attachment:fixed;
 }
 
@@ -238,7 +238,6 @@ header{
 }
 
 .webcontents{
-	height: 100vh;
 	width: 100%;
 	padding: 120px 0;
 	background-color: #000;
@@ -251,14 +250,17 @@ header{
 		letter-spacing: 0.05em;
 	}
 	.webmaga{
-		width: 266px;
-		height: 266px;
-		border:1px #fff solid;
+		width: 400px;
+		height: 400px;
+		// border:1px #fff solid;
 		box-sizing:border-box;
-		background-color: #000;
+		background-color: #fff;
 		float: left;
 		&:hover{
 			background-color: #888;
+		}
+		img{
+			width: 100%;
 		}
 	}
 }
